# avito-scraper

./: .gitignore  Makefile  README.md  avito_subscriber_init_backup.py  docker-compose.selenium.yaml  example_airflow_dag.py  main.py  parser.py  pipline.py  pyproject.toml  requirements.txt  send_avito_notifications.py
avito_json/: avito_items.json
avito_subscriber/: __init__.py
avito_subscriber/client/selenium/: selenium.py  test_selenium_integration.py
avito_subscriber/client/sql/: SQLight.py  config.py  schema.py
avito_subscriber/parser/: parser.py
avito_subscriber/scraper/: __init__.py  config.py  saver.py  scraper.py  utils.py
client/selenium/: selenium.py
client/sql/: SQLight.py  schema.py
client/telegram/: test_check_updates.py  test_send_message.py  tg.py
main/: notify.py  parser.py  scraper.py
src/: __init__.py
src/client/selenium/: selenium.py
src/notifier/: notifier.py
src/orchestration/: pipeline.py
src/parser/: loader.py  parser.py  utils.py
src/scraper/: __init__.py  config.py  saver.py  scraper.py
src/storage/: db.py
