[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avito-subscriber"
version = "0.1.0"
description = "Инструмент для скрейпинга объявлений с Avito с уведомлениями"
requires-python = ">=3.8"
dependencies = [
    "selenium==4.18.1",
    "beautifulsoup4==4.12.3",
    "webdriver-manager==4.0.2",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]
